--- a/labMedical/src/app/components/login-cadastro/login-cadastro.component.html
+++ b/labMedical/src/app/components/login-cadastro/login-cadastro.component.html
@@ -2,14 +2,14 @@
     <div class="card-body">
         <div class="mb-3 form-group">
             <label for="nome" class="form-label">Nome</label>
-            <input #inputNome="ngModel" type="text" class="form-control" name="nome" [(ngModel)]="nome" required
+            <input #inputNome="ngModel" type="text" class="form-control" name="nome" [(ngModel)]="usuario.nome" required
                 placeholder="Digite seu nome">
             <div *ngIf="!inputNome.valid&&inputNome.touched" class="alert alert-danger">Campo Obrigatório
             </div>
         </div>
         <div class="mb-3 form-group">
             <label for="emailCadastro" class="form-label">E-mail</label>
-            <input #inputEmail="ngModel" type="email" class="form-control" name="emailCadastro" [(ngModel)]="email"
+            <input #inputEmail="ngModel" type="email" class="form-control" name="emailCadastro" [(ngModel)]="usuario.email"
                 required email labMAvailableEmail placeholder="exemplo@exemplo.com">
             <div *ngIf="inputEmail.errors?.['required']&&inputEmail.touched" class="alert alert-danger">
                 Campo Obrigatório</div>
@@ -18,11 +18,16 @@
             <div *ngIf="inputEmail.errors?.['availableEmail']&&inputEmail.touched" class="alert alert-danger">
                 Email Indisponível</div>
         </div>
+        <div class="mb-3 form-group">
+            <label for="imagem" class="form-label">Imagem de Perfil</label>
+            <input #inputImagem="ngModel" type="text" class="form-control" name="imagem" [(ngModel)]="usuario.imagem"
+                placeholder="URL da Imagem">
+        </div>
         <div ngModelGroup="senhas" #checkSenhas="ngModelGroup" labMMatchingPassword>
             <div class="mb-3 form-group">
                 <label for="senhaCadastro" class="form-label">Senha</label>
                 <input #inputSenha="ngModel" type="password" class="form-control" name="senhaCadastro"
-                    [(ngModel)]="senha" required minlength="8" placeholder="Mínimo de 8 caracteres">
+                    [(ngModel)]="usuario.senha" required minlength="8" placeholder="Mínimo de 8 caracteres">
                 <div *ngIf="inputSenha.errors?.['required']&&inputSenha.touched" class="alert alert-danger">
                     Campo Obrigatório</div>
                 <div *ngIf="inputSenha.errors?.['minlength']&&inputSenha.touched" class="alert alert-danger">
@@ -35,8 +40,6 @@
             </div>
             <div *ngIf="checkSenhas.errors?.['matchingPassword']&&inputConfirmarSenha.touched&&inputSenha.touched" class="alert alert-danger">Senhas não conferem</div>
         </div>
-
-
     </div>
     <div class="d-flex justify-content-between">
         <button type="submit" class="btn btn-primary" [disabled]="!cadastroUsuario.valid">Confirmar</button>
