--- a/labMedical/src/app/components/paciente-card/paciente-card.component.html
+++ b/labMedical/src/app/components/paciente-card/paciente-card.component.html
@@ -1,7 +1,7 @@
 <div class="card border border-primary"  style="width: 12rem;">
     <button [routerLink]="['../paciente',paciente.id]" class="btn btn-primary border border-primary card-header text-center">
-        <img>
         <a>{{paciente.nome}}</a>
+        <!-- <img class="rounded-circle" style="width:3rem" src={{paciente.imagem}}> -->
     </button>
     <div class="card-body text-center">
         <p>{{paciente.dataNascimento|idade}} Anos</p>
