--- a/labMedical/src/app/pages/prontuario/prontuario.component.html
+++ b/labMedical/src/app/pages/prontuario/prontuario.component.html
@@ -35,7 +35,7 @@
                         </div>
                     </div>
                     <button class="btn btn-outline-primary rounded-0 link"
-                        [routerLink]="['/home/consulta',consulta.idPaciente]">Editar</button>
+                        [routerLink]="['/home/consulta',consulta.id]">Editar</button>
                 </section>
                 <section class="d-flex justify-content-between">
                     <div class="p-2 flex-grow-1">
@@ -67,14 +67,15 @@
                         <p>{{exame.laboratorio}}</p>
                         <p>{{exame.url}}</p>
                     </div>
-                    <div class="d-flex flex-grow-1 ">
+                    <div class="d-flex flex-grow-1 justify-content-between">
                         <div class="p-2">
                             <h4>Resultados</h4>
                             <p class="text-wrap">{{exame.resultados}}</p>
                         </div>
+                        <div *ngIf="exame.url" class="m-1"><a href="{{exame.url}}"><img style="width:2rem;" src="../../../assets/anexo.svg"></a></div>
                     </div>
                     <button class="btn btn-outline-primary rounded-0 link"
-                        [routerLink]="['/home/exame',exame.idPaciente]">Editar</button>
+                        [routerLink]="['/home/exame',exame.id]">Editar</button>
                 </section>
             </div>
         </div>
