--- a/labMedical/src/app/components/modal-aviso/modal-aviso.component.html
+++ b/labMedical/src/app/components/modal-aviso/modal-aviso.component.html
@@ -1,13 +1,12 @@
-<button type="button" class="btn btn-primary" (click)="openModal(template)">Create template modal</button>
-     
-<ng-template #template>
-  <div class="modal-header">
-    <h4 class="modal-title pull-left">Modal</h4>
-    <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="modalRef?.hide()">
-      <span aria-hidden="true" class="visually-hidden">&times;</span>
-    </button>
+<div #template>
+  <div class="alert alert-warning border p-4">
+    <h3 class="text-center">Aviso</h3>
+    <hr>
   </div>
-  <div class="modal-body">
-    This is a modal.
+  <div class="modal-body text-center">
+    <h4>{{texto.pagina}} foi {{texto.acao}}</h4>
   </div>
-</ng-template>
+  <div class="d-flex justify-content-end m-3">
+    <button class="btn btn-primary w-25" (click)="modalRef.hide()">Ok</button>
+  </div>
+</div>
