--- a/labMedical/src/app/pages/main/main.component.html
+++ b/labMedical/src/app/pages/main/main.component.html
@@ -1,8 +1,13 @@
-<labM-toolbar></labM-toolbar>
+<labM-toolbar (loading)="recebedorEvento($event)"></labM-toolbar>
 <div class="d-flex">
-    <labM-side-menu class="sidebar"></labM-side-menu>
+    <labM-side-menu  class="sidebar"></labM-side-menu>
     <div class="content-container">
-        <div class="content">
+        <ng-template #templateLoading>
+            <div class="d-flex flex-grow-1 justify-content-center align-items-center h-100" role="status">
+                <span class=" spinner-border text-dark"></span>
+            </div>
+        </ng-template>
+        <div *ngIf="!loading else templateLoading" class="content">
             <router-outlet></router-outlet>
         </div>
     </div>
