--- a/labMedical/src/app/pages/inicio/inicio.component.html
+++ b/labMedical/src/app/pages/inicio/inicio.component.html
@@ -3,8 +3,8 @@
     <div *ngFor="let estatistica of estatisticas;" class="card border-white" style="width: 12rem;">
         <img src={{estatistica.img}} class="card-img-top container mt-5" alt="...">
         <div class="card-body row text-center">
-            <p class="card-text">{{estatistica.nome}}</p>
-            <span>{{estatistica.quantidade}}</span>
+            <p class="h3" style="font-weight: bold">{{estatistica.nome}}</p>
+            <span class="h3">{{estatistica.quantidade}}</span>
         </div>
     </div>
 </div>
