--- a/labMedical/src/styles.css
+++ b/labMedical/src/styles.css
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    font-family: 'Work Sans', sans-serif;
+}
 input[required],select[required],textarea[required]{
     background-image: radial-gradient(#F00 15%, transparent 16%), radial-gradient(#F00 15%, transparent 16%);
     background-size: 1em 1em;
